--- a/buzzier_bees/lang/zh_tw.json
+++ b/buzzier_bees/lang/zh_tw.json
@@ -4,33 +4,33 @@
   "item.buzzier_bees.honey_bread": "蜂蜜面包",
   "item.buzzier_bees.glazed_porkchop": "蜜汁豬排",
   "item.buzzier_bees.silverfish_bottle": "蠹蟲瓶",
-  "item.buzzier_bees.endermite_bottle": "末影蟎瓶",
+  "item.buzzier_bees.endermite_bottle": "終界蟎瓶",
   "item.buzzier_bees.bee_bottle": "蜜蜂瓶",
   "item.buzzier_bees.honeycomb_banner_pattern": "旗幟圖案",
   "item.buzzier_bees.honeycomb_banner_pattern.desc": "蜜脾",
-  "item.buzzier_bees.grizzly_bear_spawn_egg": "灰熊刷怪蛋",
-  "item.buzzier_bees.moobloom_spawn_egg": "哞花刷怪蛋",
+  "item.buzzier_bees.grizzly_bear_spawn_egg": "灰熊生怪蛋",
+  "item.buzzier_bees.moobloom_spawn_egg": "哞花生怪蛋",
   "block.buzzier_bees.oak_beehive": "橡木蜂箱",
   "block.buzzier_bees.spruce_beehive": "雲杉木蜂箱",
   "block.buzzier_bees.birch_beehive": "白樺木蜂箱",
   "block.buzzier_bees.jungle_beehive": "叢林木蜂箱",
   "block.buzzier_bees.acacia_beehive": "金合歡木蜂箱",
   "block.buzzier_bees.dark_oak_beehive": "深色橡木蜂箱",
-  "block.buzzier_bees.crimson_beehive": "緋紅木蜂箱",
-  "block.buzzier_bees.warped_beehive": "詭異木蜂箱",
+  "block.buzzier_bees.crimson_beehive": "緋紅蕈蜂箱",
+  "block.buzzier_bees.warped_beehive": "扭曲蕈木蜂箱",
   "block.buzzier_bees.crystallized_honey_block": "結晶蜜塊",
   "block.buzzier_bees.honey_lamp": "蜂蜜燈",
   "block.buzzier_bees.honeycomb_bricks": "蜜脾磚",
   "block.buzzier_bees.honeycomb_brick_stairs": "蜜脾磚樓梯",
-  "block.buzzier_bees.honeycomb_brick_slab": "蜜脾磚台階",
+  "block.buzzier_bees.honeycomb_brick_slab": "蜜脾磚半磚",
   "block.buzzier_bees.honeycomb_brick_wall": "蜜脾磚墻",
-  "block.buzzier_bees.honeycomb_brick_vertical_slab": "蜜脾磚豎直台階",
+  "block.buzzier_bees.honeycomb_brick_vertical_slab": "蜜脾磚豎直半磚",
   "block.buzzier_bees.chiseled_honeycomb_bricks": "鏨制蜜脾磚",
   "block.buzzier_bees.honeycomb_tiles": "蜜脾瓦",
   "block.buzzier_bees.honeycomb_tile_stairs": "蜜脾瓦樓梯",
-  "block.buzzier_bees.honeycomb_tile_slab": "蜜脾瓦台階",
+  "block.buzzier_bees.honeycomb_tile_slab": "蜜脾瓦半磚",
   "block.buzzier_bees.honeycomb_tile_wall": "蜜脾瓦墻",
-  "block.buzzier_bees.honeycomb_tile_vertical_slab": "蜜脾瓦豎直台階",
+  "block.buzzier_bees.honeycomb_tile_vertical_slab": "蜜脾瓦豎直半磚",
   "block.buzzier_bees.honeycomb_door": "蜜脾門",
   "block.buzzier_bees.honeycomb_trapdoor": "蜜脾活板門",
   "block.buzzier_bees.soul_candle": "靈魂蠟燭",
