--- a/buildersaddition/lang/zh_tw.json
+++ b/buildersaddition/lang/zh_tw.json
@@ -17,12 +17,12 @@
   "block.buildersaddition.large_soul_candle": "大號靈魂蠟燭",
   "block.buildersaddition.soul_candle": "靈魂蠟燭",
   "block.buildersaddition.stone_vertical_slab": "石豎直半磚",
-  "block.buildersaddition.acacia_vertical_slab": "金合歡木豎直半磚",
+  "block.buildersaddition.acacia_vertical_slab": "相思木豎直半磚",
   "block.buildersaddition.birch_vertical_slab": "白樺木豎直半磚",
-  "block.buildersaddition.spruce_vertical_slab": "雲杉木豎直半磚",
+  "block.buildersaddition.spruce_vertical_slab": "杉木豎直半磚",
   "block.buildersaddition.jungle_vertical_slab": "叢林木豎直半磚",
   "block.buildersaddition.oak_vertical_slab": "橡木豎直半磚",
-  "block.buildersaddition.dark_oak_vertical_slab": "深色橡木豎直半磚",
+  "block.buildersaddition.dark_oak_vertical_slab": "黑橡木豎直半磚",
   "block.buildersaddition.andesite_vertical_slab": "安山巖豎直半磚",
   "block.buildersaddition.cobblestone_vertical_slab": "圓石豎直半磚",
   "block.buildersaddition.dark_prismarine_vertical_slab": "暗海晶石豎直半磚",
@@ -43,12 +43,12 @@
   "block.buildersaddition.smooth_stone_vertical_slab": "平滑石豎直半磚",
   "block.buildersaddition.cut_sandstone_vertical_slab": "切制砂巖豎直半磚",
   "block.buildersaddition.cut_red_sandstone_vertical_slab": "切制紅砂巖豎直半磚",
-  "block.buildersaddition.crimson_vertical_slab": "緋紅木豎直半磚",
-  "block.buildersaddition.warped_vertical_slab": "詭異木豎直半磚",
+  "block.buildersaddition.crimson_vertical_slab": "緋紅蕈木豎直半磚",
+  "block.buildersaddition.warped_vertical_slab": "扭曲蕈木豎直半磚",
   "block.buildersaddition.blackstone_vertical_slab": "黑石豎直半磚",
   "block.buildersaddition.polished_blackstone_vertical_slab": "磨制黑石豎直半磚",
-  "block.buildersaddition.cut_nether_bricks_pillar": "切制下界磚柱",
-  "block.buildersaddition.cut_red_nether_bricks_pillar": "切制紅色下界磚柱",
+  "block.buildersaddition.cut_nether_bricks_pillar": "切制地獄磚柱",
+  "block.buildersaddition.cut_red_nether_bricks_pillar": "切制紅色地獄磚柱",
   "block.buildersaddition.cut_stone_pillar": "切制石柱",
   "block.buildersaddition.cut_quartz_pillar": "切制石英柱",
   "block.buildersaddition.cut_sandstone_pillar": "切制砂巖柱",
@@ -68,61 +68,61 @@
   "block.buildersaddition.cut_blackstone_pillar": "切制黑石磚柱",
   "block.buildersaddition.cut_quartz_bricks_pillar": "切制石英磚柱",
   "block.buildersaddition.table_oak": "橡木桌子",
-  "block.buildersaddition.table_spruce": "雲杉木桌子",
+  "block.buildersaddition.table_spruce": "杉木桌子",
   "block.buildersaddition.table_birch": "白樺木桌子",
-  "block.buildersaddition.table_dark_oak": "深色橡木桌子",
-  "block.buildersaddition.table_acacia": "金合歡木桌子",
+  "block.buildersaddition.table_dark_oak": "黑橡木桌子",
+  "block.buildersaddition.table_acacia": "相思木桌子",
   "block.buildersaddition.table_jungle": "叢林木桌子",
-  "block.buildersaddition.table_crimson": "緋紅木桌子",
-  "block.buildersaddition.table_warped": "詭異木桌子",
+  "block.buildersaddition.table_crimson": "緋紅蕈木桌子",
+  "block.buildersaddition.table_warped": "扭曲蕈木桌子",
   "block.buildersaddition.bookshelf_oak": "橡木書架",
-  "block.buildersaddition.bookshelf_spruce": "雲杉木書架",
+  "block.buildersaddition.bookshelf_spruce": "杉木書架",
   "block.buildersaddition.bookshelf_birch": "白樺木書架",
-  "block.buildersaddition.bookshelf_dark_oak": "深色橡木書架",
-  "block.buildersaddition.bookshelf_acacia": "金合歡木書架",
+  "block.buildersaddition.bookshelf_dark_oak": "黑橡木書架",
+  "block.buildersaddition.bookshelf_acacia": "相思木書架",
   "block.buildersaddition.bookshelf_jungle": "叢林木書架",
-  "block.buildersaddition.bookshelf_crimson": "緋紅木書架",
-  "block.buildersaddition.bookshelf_warped": "詭異木書架",
+  "block.buildersaddition.bookshelf_crimson": "緋紅蕈木書架",
+  "block.buildersaddition.bookshelf_warped": "扭曲蕈木書架",
   "block.buildersaddition.shelf_oak": "橡木架子",
-  "block.buildersaddition.shelf_spruce": "雲杉木架子",
+  "block.buildersaddition.shelf_spruce": "杉木架子",
   "block.buildersaddition.shelf_birch": "白樺木架子",
-  "block.buildersaddition.shelf_dark_oak": "深色橡木架子",
-  "block.buildersaddition.shelf_acacia": "金合歡木架子",
+  "block.buildersaddition.shelf_dark_oak": "黑橡木架子",
+  "block.buildersaddition.shelf_acacia": "相思木架子",
   "block.buildersaddition.shelf_jungle": "叢林木架子",
-  "block.buildersaddition.shelf_crimson": "緋紅木架子",
-  "block.buildersaddition.shelf_warped": "詭異木架子",
+  "block.buildersaddition.shelf_crimson": "緋紅蕈木架子",
+  "block.buildersaddition.shelf_warped": "扭曲蕈木架子",
   "block.buildersaddition.cabinet_oak": "橡木櫥櫃",
-  "block.buildersaddition.cabinet_spruce": "雲杉木櫥櫃",
+  "block.buildersaddition.cabinet_spruce": "杉木櫥櫃",
   "block.buildersaddition.cabinet_birch": "白樺木櫥櫃",
-  "block.buildersaddition.cabinet_dark_oak": "深色橡木櫥櫃",
-  "block.buildersaddition.cabinet_acacia": "金合歡木櫥櫃",
+  "block.buildersaddition.cabinet_dark_oak": "黑橡木櫥櫃",
+  "block.buildersaddition.cabinet_acacia": "相思木櫥櫃",
   "block.buildersaddition.cabinet_jungle": "叢林木櫥櫃",
-  "block.buildersaddition.cabinet_crimson": "緋紅木櫥櫃",
-  "block.buildersaddition.cabinet_warped": "詭異木櫥櫃",
+  "block.buildersaddition.cabinet_crimson": "緋紅蕈木櫥櫃",
+  "block.buildersaddition.cabinet_warped": "扭曲蕈木櫥櫃",
   "block.buildersaddition.bedside_table_oak": "橡木床頭櫃",
-  "block.buildersaddition.bedside_table_spruce": "雲杉木床頭櫃",
+  "block.buildersaddition.bedside_table_spruce": "杉木床頭櫃",
   "block.buildersaddition.bedside_table_birch": "白樺木床頭櫃",
-  "block.buildersaddition.bedside_table_dark_oak": "深色橡木床頭櫃",
-  "block.buildersaddition.bedside_table_acacia": "金合歡木床頭櫃",
+  "block.buildersaddition.bedside_table_dark_oak": "黑橡木床頭櫃",
+  "block.buildersaddition.bedside_table_acacia": "相思木床頭櫃",
   "block.buildersaddition.bedside_table_jungle": "叢林木床頭櫃",
-  "block.buildersaddition.bedside_table_crimson": "緋紅木床頭櫃",
-  "block.buildersaddition.bedside_table_warped": "詭異木床頭櫃",
+  "block.buildersaddition.bedside_table_crimson": "緋紅蕈木床頭櫃",
+  "block.buildersaddition.bedside_table_warped": "扭曲蕈木床頭櫃",
   "block.buildersaddition.hedge_oak": "橡樹樹籬",
   "block.buildersaddition.hedge_spruce": "雲杉樹籬",
   "block.buildersaddition.hedge_birch": "白樺樹籬",
   "block.buildersaddition.hedge_dark_oak": "深色橡樹籬",
   "block.buildersaddition.hedge_acacia": "金合歡樹籬",
   "block.buildersaddition.hedge_jungle": "叢林樹籬",
-  "block.buildersaddition.hedge_crimson": "下界樹籬",
-  "block.buildersaddition.hedge_warped": "詭異樹籬",
+  "block.buildersaddition.hedge_crimson": "地獄樹籬",
+  "block.buildersaddition.hedge_warped": "扭曲蕈樹籬",
   "block.buildersaddition.bench_oak": "橡木長凳",
-  "block.buildersaddition.bench_spruce": "雲杉木長凳",
+  "block.buildersaddition.bench_spruce": "杉木長凳",
   "block.buildersaddition.bench_birch": "白樺木長凳",
-  "block.buildersaddition.bench_dark_oak": "深色橡木長凳",
-  "block.buildersaddition.bench_acacia": "金合歡木長凳",
+  "block.buildersaddition.bench_dark_oak": "黑橡木長凳",
+  "block.buildersaddition.bench_acacia": "相思木長凳",
   "block.buildersaddition.bench_jungle": "叢林木長凳",
-  "block.buildersaddition.bench_crimson": "緋紅木長凳",
-  "block.buildersaddition.bench_warped": "詭異木長凳",
+  "block.buildersaddition.bench_crimson": "緋紅蕈木長凳",
+  "block.buildersaddition.bench_warped": "扭曲蕈木長凳",
   "block.buildersaddition.sofa_black": "黑色沙發",
   "block.buildersaddition.sofa_blue": "藍色沙發",
   "block.buildersaddition.sofa_brown": "棕色沙發",
@@ -143,58 +143,58 @@
   "block.buildersaddition.counter_oak_diorite": "閃長巖橡木櫃台",
   "block.buildersaddition.counter_oak_granite": "花崗巖橡木櫃台",
   "block.buildersaddition.counter_oak_blackstone": "黑石橡木櫃台",
-  "block.buildersaddition.counter_spruce_andesite": "安山巖雲杉木櫃台",
-  "block.buildersaddition.counter_spruce_diorite": "閃長巖雲杉木櫃台",
-  "block.buildersaddition.counter_spruce_granite": "花崗巖雲杉木櫃台",
-  "block.buildersaddition.counter_spruce_blackstone": "黑石雲杉木櫃台",
+  "block.buildersaddition.counter_spruce_andesite": "安山巖杉木櫃台",
+  "block.buildersaddition.counter_spruce_diorite": "閃長巖杉木櫃台",
+  "block.buildersaddition.counter_spruce_granite": "花崗巖杉木櫃台",
+  "block.buildersaddition.counter_spruce_blackstone": "黑石杉木櫃台",
   "block.buildersaddition.counter_birch_andesite": "安山巖白樺木櫃台",
   "block.buildersaddition.counter_birch_diorite": "閃長巖白樺木櫃台",
   "block.buildersaddition.counter_birch_granite": "花崗巖白樺木櫃台",
   "block.buildersaddition.counter_birch_blackstone": "黑石白樺木櫃台",
-  "block.buildersaddition.counter_acacia_andesite": "安山巖金合歡木櫃台",
-  "block.buildersaddition.counter_acacia_diorite": "閃長巖金合歡木櫃台",
-  "block.buildersaddition.counter_acacia_granite": "花崗巖金合歡木櫃台",
-  "block.buildersaddition.counter_acacia_blackstone": "黑石金合歡木櫃台",
-  "block.buildersaddition.counter_dark_oak_andesite": "安山巖深色橡木櫃台",
-  "block.buildersaddition.counter_dark_oak_diorite": "閃長巖深色橡木櫃台",
-  "block.buildersaddition.counter_dark_oak_granite": "花崗巖深色橡木櫃台",
-  "block.buildersaddition.counter_dark_oak_blackstone": "黑石深色橡木櫃台",
+  "block.buildersaddition.counter_acacia_andesite": "安山巖相思木櫃台",
+  "block.buildersaddition.counter_acacia_diorite": "閃長巖相思木櫃台",
+  "block.buildersaddition.counter_acacia_granite": "花崗巖相思木櫃台",
+  "block.buildersaddition.counter_acacia_blackstone": "黑石相思木櫃台",
+  "block.buildersaddition.counter_dark_oak_andesite": "安山巖黑橡木櫃台",
+  "block.buildersaddition.counter_dark_oak_diorite": "閃長巖黑橡木櫃台",
+  "block.buildersaddition.counter_dark_oak_granite": "花崗巖黑橡木櫃台",
+  "block.buildersaddition.counter_dark_oak_blackstone": "黑石黑橡木櫃台",
   "block.buildersaddition.counter_jungle_andesite": "安山巖叢林木櫃台",
   "block.buildersaddition.counter_jungle_diorite": "閃長巖叢林木櫃台",
   "block.buildersaddition.counter_jungle_granite": "花崗巖叢林木櫃台",
   "block.buildersaddition.counter_jungle_blackstone": "黑石叢林木櫃台",
-  "block.buildersaddition.counter_crimson_andesite": "安山巖緋紅木櫃台",
-  "block.buildersaddition.counter_crimson_diorite": "閃長巖緋紅木櫃台",
-  "block.buildersaddition.counter_crimson_granite": "花崗巖緋紅木櫃台",
-  "block.buildersaddition.counter_crimson_blackstone": "黑石緋紅木櫃台",
-  "block.buildersaddition.counter_warped_andesite": "安山巖詭異木櫃台",
-  "block.buildersaddition.counter_warped_diorite": "閃長巖詭異木櫃台",
-  "block.buildersaddition.counter_warped_granite": "花崗巖詭異木櫃台",
-  "block.buildersaddition.counter_warped_blackstone": "黑石詭異木櫃台",
+  "block.buildersaddition.counter_crimson_andesite": "安山巖緋紅蕈木櫃台",
+  "block.buildersaddition.counter_crimson_diorite": "閃長巖緋紅蕈木櫃台",
+  "block.buildersaddition.counter_crimson_granite": "花崗巖緋紅蕈木櫃台",
+  "block.buildersaddition.counter_crimson_blackstone": "黑石緋紅蕈木櫃台",
+  "block.buildersaddition.counter_warped_andesite": "安山巖扭曲蕈木櫃台",
+  "block.buildersaddition.counter_warped_diorite": "閃長巖扭曲蕈木櫃台",
+  "block.buildersaddition.counter_warped_granite": "花崗巖扭曲蕈木櫃台",
+  "block.buildersaddition.counter_warped_blackstone": "黑石扭曲蕈木櫃台",
   "block.buildersaddition.stool_oak": "橡木凳子",
-  "block.buildersaddition.stool_spruce": "雲杉木凳子",
+  "block.buildersaddition.stool_spruce": "杉木凳子",
   "block.buildersaddition.stool_birch": "白樺木凳子",
-  "block.buildersaddition.stool_acacia": "金合歡木凳子",
-  "block.buildersaddition.stool_dark_oak": "深色橡木凳子",
+  "block.buildersaddition.stool_acacia": "相思木凳子",
+  "block.buildersaddition.stool_dark_oak": "黑橡木凳子",
   "block.buildersaddition.stool_jungle": "叢林木凳子",
-  "block.buildersaddition.stool_crimson": "緋紅木凳子",
-  "block.buildersaddition.stool_warped": "詭異木凳子",
+  "block.buildersaddition.stool_crimson": "緋紅蕈木凳子",
+  "block.buildersaddition.stool_warped": "扭曲蕈木凳子",
   "block.buildersaddition.cupboard_oak": "橡木立櫃",
-  "block.buildersaddition.cupboard_spruce": "雲杉木立櫃",
+  "block.buildersaddition.cupboard_spruce": "杉木立櫃",
   "block.buildersaddition.cupboard_birch": "白樺木立櫃",
-  "block.buildersaddition.cupboard_acacia": "金合歡木立櫃",
-  "block.buildersaddition.cupboard_dark_oak": "深色橡木立櫃",
+  "block.buildersaddition.cupboard_acacia": "相思木立櫃",
+  "block.buildersaddition.cupboard_dark_oak": "黑橡木立櫃",
   "block.buildersaddition.cupboard_jungle": "叢林木立櫃",
-  "block.buildersaddition.cupboard_crimson": "緋紅木立櫃",
-  "block.buildersaddition.cupboard_warped": "詭異木立櫃",
+  "block.buildersaddition.cupboard_crimson": "緋紅蕈木立櫃",
+  "block.buildersaddition.cupboard_warped": "扭曲蕈木立櫃",
   "block.buildersaddition.arcade_oak": "橡木街機",
-  "block.buildersaddition.arcade_spruce": "雲杉木街機",
+  "block.buildersaddition.arcade_spruce": "杉木街機",
   "block.buildersaddition.arcade_birch": "白樺木街機",
-  "block.buildersaddition.arcade_acacia": "金合歡木街機",
-  "block.buildersaddition.arcade_dark_oak": "深色橡木街機",
+  "block.buildersaddition.arcade_acacia": "相思木街機",
+  "block.buildersaddition.arcade_dark_oak": "黑橡木街機",
   "block.buildersaddition.arcade_jungle": "叢林木街機",
-  "block.buildersaddition.arcade_crimson": "緋紅木街機",
-  "block.buildersaddition.arcade_warped": "詭異木街機",
+  "block.buildersaddition.arcade_crimson": "緋紅蕈木街機",
+  "block.buildersaddition.arcade_warped": "扭曲蕈木街機",
   "block.buildersaddition.pillow_black": "黑色枕頭",
   "block.buildersaddition.pillow_blue": "藍色枕頭",
   "block.buildersaddition.pillow_brown": "棕色枕頭",
@@ -228,13 +228,13 @@
   "block.buildersaddition.luminus_glass_white": "白色發光玻璃",
   "block.buildersaddition.luminus_glass_yellow": "黃色發光玻璃",
   "block.buildersaddition.support_bracket_oak": "橡木支撐架",
-  "block.buildersaddition.support_bracket_spruce": "雲杉木支撐架",
+  "block.buildersaddition.support_bracket_spruce": "杉木支撐架",
   "block.buildersaddition.support_bracket_birch": "白樺木支撐架",
-  "block.buildersaddition.support_bracket_acacia": "金合歡木支撐架",
-  "block.buildersaddition.support_bracket_dark_oak": "深色橡木支撐架",
+  "block.buildersaddition.support_bracket_acacia": "相思木支撐架",
+  "block.buildersaddition.support_bracket_dark_oak": "黑橡木支撐架",
   "block.buildersaddition.support_bracket_jungle": "叢林木支撐架",
-  "block.buildersaddition.support_bracket_crimson": "緋紅木支撐架",
-  "block.buildersaddition.support_bracket_warped": "詭異木支撐架",
+  "block.buildersaddition.support_bracket_crimson": "緋紅蕈木支撐架",
+  "block.buildersaddition.support_bracket_warped": "扭曲蕈木支撐架",
   "block.buildersaddition.vertical_repeater": "豎直紅石中繼器",
   "block.buildersaddition.vertical_comparator": "豎直紅石比較器",
   "container.buildersaddition.counter": "櫃台",
