--- a/blocksplus/lang/zh_tw.json
+++ b/blocksplus/lang/zh_tw.json
@@ -34,27 +34,27 @@
   "block.minecraft.crafting_table": "橡木工作台",
   "block.minecraft.bookshelf": "橡木書架",
   "block.minecraft.ladder": "橡木梯子",
-  "block.blocksplus.spruce_crafting_table": "雲杉木工作台",
-  "block.blocksplus.spruce_bookshelf": "雲杉木書架",
-  "block.blocksplus.spruce_ladder": "雲杉木梯子",
+  "block.blocksplus.spruce_crafting_table": "杉木工作台",
+  "block.blocksplus.spruce_bookshelf": "杉木書架",
+  "block.blocksplus.spruce_ladder": "杉木梯子",
   "block.blocksplus.birch_crafting_table": "白樺木工作台",
   "block.blocksplus.birch_bookshelf": "白樺木書架",
   "block.blocksplus.birch_ladder": "白樺木梯子",
   "block.blocksplus.jungle_crafting_table": "叢林木工作台",
   "block.blocksplus.jungle_bookshelf": "叢林木書架",
   "block.blocksplus.jungle_ladder": "叢林木梯子",
-  "block.blocksplus.acacia_crafting_table": "金合歡木工作台",
-  "block.blocksplus.acacia_bookshelf": "金合歡木書架",
-  "block.blocksplus.acacia_ladder": "金合歡木梯子",
-  "block.blocksplus.dark_oak_crafting_table": "深色橡木工作台",
-  "block.blocksplus.dark_oak_bookshelf": "深色橡木書架",
-  "block.blocksplus.dark_oak_ladder": "深色橡木梯子",
-  "block.blocksplus.crimson_crafting_table": "緋紅木工作台",
-  "block.blocksplus.crimson_bookshelf": "緋紅木書架",
-  "block.blocksplus.crimson_ladder": "緋紅木梯子",
-  "block.blocksplus.warped_crafting_table": "詭異木工作台",
-  "block.blocksplus.warped_bookshelf": "詭異木書架",
-  "block.blocksplus.warped_ladder": "詭異木梯子",
+  "block.blocksplus.acacia_crafting_table": "相思木工作台",
+  "block.blocksplus.acacia_bookshelf": "相思木書架",
+  "block.blocksplus.acacia_ladder": "相思木梯子",
+  "block.blocksplus.dark_oak_crafting_table": "黑橡木工作台",
+  "block.blocksplus.dark_oak_bookshelf": "黑橡木書架",
+  "block.blocksplus.dark_oak_ladder": "黑橡木梯子",
+  "block.blocksplus.crimson_crafting_table": "緋紅蕈木工作台",
+  "block.blocksplus.crimson_bookshelf": "緋紅蕈木書架",
+  "block.blocksplus.crimson_ladder": "緋紅蕈木梯子",
+  "block.blocksplus.warped_crafting_table": "扭曲蕈木工作台",
+  "block.blocksplus.warped_bookshelf": "扭曲蕈木書架",
+  "block.blocksplus.warped_ladder": "扭曲蕈木梯子",
   "block.blocksplus.soul_jack_o_lantern": "靈魂南瓜燈",
   "block.blocksplus.redstone_jack_o_lantern": "紅石南瓜燈",
   "block.blocksplus.red_nether_brick_fence": "紅色下界磚柵欄",
@@ -67,7 +67,7 @@
   "block.blocksplus.blue_nether_brick_fence": "藍色下界磚柵欄",
   "block.blocksplus.cracked_blue_nether_bricks": "裂紋藍色下界磚塊",
   "block.blocksplus.chiseled_blue_nether_bricks": "雕紋藍色下界磚塊",
-  "block.blocksplus.warped_wart": "詭異疣",
+  "block.blocksplus.warped_wart": "扭曲蕈疣",
   "block.blocksplus.lapis_lazuli_stairs": "青金石樓梯",
   "block.blocksplus.lapis_lazuli_slab": "青金石半磚",
   "block.blocksplus.iron_stairs": "鐵樓梯",
