--- a/biomesoplenty/lang/zh_tw.json
+++ b/biomesoplenty/lang/zh_tw.json
@@ -17,9 +17,9 @@
   "biome.biomesoplenty.dead_forest": "枯死森林",
   "biome.biomesoplenty.dryland": "旱地",
   "biome.biomesoplenty.dune_beach": "沙丘沙灘",
-  "biome.biomesoplenty.end_corruption": "末地壞點",
-  "biome.biomesoplenty.end_reef": "末地礁灘",
-  "biome.biomesoplenty.end_wilds": "末地荒野",
+  "biome.biomesoplenty.end_corruption": "終界壞點",
+  "biome.biomesoplenty.end_reef": "終界礁灘",
+  "biome.biomesoplenty.end_wilds": "終界荒野",
   "biome.biomesoplenty.erupting_inferno": "熔巖地獄",
   "biome.biomesoplenty.field": "原野",
   "biome.biomesoplenty.fir_clearing": "杉樹林空地",
@@ -107,7 +107,7 @@
   "item.biomesoplenty.umbran_chest_boat": "暗影木運輸船",
   "item.biomesoplenty.willow_boat": "柳木船",
   "item.biomesoplenty.willow_chest_boat": "柳木運輸船",
-  "block.biomesoplenty.algal_end_stone": "覆藻末地石",
+  "block.biomesoplenty.algal_end_stone": "覆藻終界石",
   "block.biomesoplenty.anomaly": "§k異常方塊",
   "block.biomesoplenty.barley": "大麥",
   "block.biomesoplenty.barnacles": "藤壺",
@@ -185,8 +185,8 @@
   "block.biomesoplenty.empyreal_wall_sign": "墻上的重霄木告示牌",
   "block.biomesoplenty.empyreal_wall_hanging_sign": "墻上的懸掛式重霄木告示牌",
   "block.biomesoplenty.empyreal_wood": "重霄木",
-  "block.biomesoplenty.endbloom": "末地花",
-  "block.biomesoplenty.enderphyte": "末地生植",
+  "block.biomesoplenty.endbloom": "終界花",
+  "block.biomesoplenty.enderphyte": "終界生植",
   "block.biomesoplenty.eyebulb": "眼球草",
   "block.biomesoplenty.fir_button": "杉木按鈕",
   "block.biomesoplenty.fir_door": "杉木門",
@@ -373,7 +373,7 @@
   "block.biomesoplenty.potted_cypress_sapling": "柏樹樹苗盆栽",
   "block.biomesoplenty.potted_dead_sapling": "枯死樹苗盆栽",
   "block.biomesoplenty.potted_empyreal_sapling": "重霄樹苗盆栽",
-  "block.biomesoplenty.potted_endbloom": "末地花盆栽",
+  "block.biomesoplenty.potted_endbloom": "終界花盆栽",
   "block.biomesoplenty.potted_fir_sapling": "杉樹樹苗盆栽",
   "block.biomesoplenty.potted_flowering_oak_sapling": "花橡樹苗盆栽",
   "block.biomesoplenty.potted_glowflower": "夜光花盆栽",
@@ -500,7 +500,7 @@
   "block.biomesoplenty.umbran_wall_sign": "墻上的暗影木告示牌",
   "block.biomesoplenty.umbran_wall_hanging_sign": "墻上的懸掛式暗影木告示牌",
   "block.biomesoplenty.umbran_wood": "暗影木",
-  "block.biomesoplenty.unmapped_end_stone": "§m末地石",
+  "block.biomesoplenty.unmapped_end_stone": "§m終界石",
   "block.biomesoplenty.violet": "紫羅蘭",
   "block.biomesoplenty.watergrass": "水草",
   "block.biomesoplenty.waterlily": "蓮花",
