--- a/betterarcheology/lang/zh_tw.json
+++ b/betterarcheology/lang/zh_tw.json
@@ -2,15 +2,15 @@
   "itemGroup.betterarcheology": "更好的考古學",
   "block.betterarcheology.rotten_log": "腐朽原木",
   "block.betterarcheology.rotten_planks": "腐朽木板",
-  "block.betterarcheology.rotten_slab": "腐朽木台階",
+  "block.betterarcheology.rotten_slab": "腐朽木半磚",
   "block.betterarcheology.rotten_stairs": "腐朽木樓梯",
   "block.betterarcheology.rotten_fence": "腐朽木柵欄",
   "block.betterarcheology.rotten_fence_gate": "腐朽木柵欄門",
-  "block.betterarcheology.rotten_trapdoor": "腐朽木活板門",
+  "block.betterarcheology.rotten_trapdoor": "腐朽木地板門",
   "block.betterarcheology.rotten_door": "腐朽木門",
   "block.betterarcheology.infested_mud_bricks": "蟲蝕泥磚",
   "block.betterarcheology.cracked_mud_bricks": "裂紋泥磚",
-  "block.betterarcheology.cracked_mud_brick_slab": "裂紋泥磚台階",
+  "block.betterarcheology.cracked_mud_brick_slab": "裂紋泥磚半磚",
   "block.betterarcheology.cracked_mud_brick_stairs": "裂紋泥磚樓梯",
   "block.betterarcheology.suspicious_red_sand": "可疑的紅沙",
   "block.betterarcheology.suspicious_dirt": "可疑的泥土",
