--- a/beautify/lang/zh_tw.json
+++ b/beautify/lang/zh_tw.json
@@ -5,12 +5,12 @@
   "block.beautify.bookstack": "書堆",
   "block.beautify.oak_picture_frame": "橡木畫框",
   "block.beautify.birch_picture_frame": "白樺木畫框",
-  "block.beautify.spruce_picture_frame": "雲杉木畫框",
-  "block.beautify.dark_oak_picture_frame": "深色橡木畫框",
+  "block.beautify.spruce_picture_frame": "杉木畫框",
+  "block.beautify.dark_oak_picture_frame": "黑橡木畫框",
   "block.beautify.jungle_picture_frame": "叢林木畫框",
-  "block.beautify.acacia_picture_frame": "金合歡木畫框",
-  "block.beautify.warped_picture_frame": "詭異木畫框",
-  "block.beautify.crimson_picture_frame": "緋紅木畫框",
+  "block.beautify.acacia_picture_frame": "相思木畫框",
+  "block.beautify.warped_picture_frame": "扭曲蕈木畫框",
+  "block.beautify.crimson_picture_frame": "緋紅蕈木畫框",
   "block.beautify.quartz_picture_frame": "石英畫框",
   "block.beautify.lamp_light_bulb": "燈泡",
   "block.beautify.lamp_bamboo": "竹燈",
@@ -33,22 +33,22 @@
   "block.beautify.lamp_candleabra_white": "白色蠟燭燭台",
   "block.beautify.lamp_candleabra_yellow": "黃色蠟燭燭台",
   "block.beautify.oak_blinds": "橡木百葉窗",
-  "block.beautify.spruce_blinds": "雲杉木百葉窗",
+  "block.beautify.spruce_blinds": "杉木百葉窗",
   "block.beautify.birch_blinds": "白樺木百葉窗",
-  "block.beautify.dark_oak_blinds": "深色橡木百葉窗",
+  "block.beautify.dark_oak_blinds": "黑橡木百葉窗",
   "block.beautify.jungle_blinds": "叢林木百葉窗",
-  "block.beautify.crimson_blinds": "緋紅木百葉窗",
-  "block.beautify.acacia_blinds": "金合歡木百葉窗",
-  "block.beautify.warped_blinds": "詭異木百葉窗",
+  "block.beautify.crimson_blinds": "緋紅蕈木百葉窗",
+  "block.beautify.acacia_blinds": "相思木百葉窗",
+  "block.beautify.warped_blinds": "扭曲蕈木百葉窗",
   "block.beautify.iron_blinds": "鐵百葉窗",
   "block.beautify.oak_trellis": "橡木花爬架",
-  "block.beautify.spruce_trellis": "雲杉木花爬架",
+  "block.beautify.spruce_trellis": "杉木花爬架",
   "block.beautify.birch_trellis": "白樺木花爬架",
   "block.beautify.jungle_trellis": "叢林木花爬架",
-  "block.beautify.acacia_trellis": "金合歡木花爬架",
-  "block.beautify.dark_oak_trellis": "深色橡木花爬架",
-  "block.beautify.crimson_trellis": "緋紅木花爬架",
-  "block.beautify.warped_trellis": "詭異木花爬架",
+  "block.beautify.acacia_trellis": "相思木花爬架",
+  "block.beautify.dark_oak_trellis": "黑橡木花爬架",
+  "block.beautify.crimson_trellis": "緋紅蕈木花爬架",
+  "block.beautify.warped_trellis": "扭曲蕈木花爬架",
   "sounds.beautify.bookstack_break": "書堆：被破壞",
   "sounds.beautify.bookstack_step": "腳步聲",
   "sounds.beautify.bookstack_place": "書堆：被放置",
