--- a/beachparty/lang/zh_tw.json
+++ b/beachparty/lang/zh_tw.json
@@ -24,7 +24,7 @@
   "block.beachparty.coconut_hanging": "懸掛的椰子",
   "block.beachparty.deck_chair": "沙灘日光椅",
   "block.beachparty.dried_wheat_block": "草垛塊",
-  "block.beachparty.dried_wheat_slab": "草垛台階",
+  "block.beachparty.dried_wheat_slab": "草垛半磚",
   "block.beachparty.dried_wheat_stairs": "草垛樓梯",
   "block.beachparty.dry_bush": "乾灌木",
   "block.beachparty.dry_bush_tall": "高乾灌木",
@@ -49,12 +49,12 @@
   "block.beachparty.palm_pressure_plate": "棕櫚木壓力板",
   "block.beachparty.palm_sapling": "棕櫚樹苗",
   "block.beachparty.palm_sign": "棕櫚木告示牌",
-  "block.beachparty.palm_slab": "棕櫚木台階",
+  "block.beachparty.palm_slab": "棕櫚木半磚",
   "block.beachparty.palm_stairs": "棕櫚木樓梯",
   "block.beachparty.palm_tall_torch": "棕櫚木高火炬",
   "block.beachparty.palm_torch": "棕櫚木火炬",
   "block.beachparty.palm_torch_item": "棕櫚木火炬",
-  "block.beachparty.palm_trapdoor": "棕櫚木活板門",
+  "block.beachparty.palm_trapdoor": "棕櫚木地板門",
   "block.beachparty.palm_wall_torch": "棕櫚木火炬",
   "block.beachparty.palm_wood": "棕櫚木",
   "block.beachparty.pumpkin_cocktail": "南瓜雞尾酒",
@@ -64,7 +64,7 @@
   "block.beachparty.sand_dirty": "污泥沙子",
   "block.beachparty.sand_pile": "沙堆",
   "block.beachparty.sand_seastars": "有海星的沙子",
-  "block.beachparty.sand_slab": "沙子台階",
+  "block.beachparty.sand_slab": "沙子半磚",
   "block.beachparty.sandcastle": "沙堡",
   "block.beachparty.sandwaves": "波紋沙子",
   "block.beachparty.stripped_palm_log": "去皮棕櫚原木",
