--- a/bambooeverything/lang/zh_tw.json
+++ b/bambooeverything/lang/zh_tw.json
@@ -4,10 +4,10 @@
   "block.bambooeverything.bamboo_fence": "竹柵欄",
   "block.bambooeverything.bamboo_fence_gate": "竹柵欄門",
   "block.bambooeverything.bamboo_door": "竹門",
-  "block.bambooeverything.bamboo_trapdoor": "竹活板門",
+  "block.bambooeverything.bamboo_trapdoor": "竹地板門",
   "block.bambooeverything.bamboo_bundle": "竹塊",
   "block.bambooeverything.bamboo_stairs": "竹樓梯",
-  "block.bambooeverything.bamboo_slab": "竹台階",
+  "block.bambooeverything.bamboo_slab": "竹半磚",
   "block.bambooeverything.bamboo_torch": "竹火把",
   "item.bambooeverything.bamboo_raft": "竹筏",
   "item.bambooeverything.dry_bamboo": "乾制竹子",
@@ -15,10 +15,10 @@
   "block.bambooeverything.dry_bamboo_fence": "乾制竹柵欄",
   "block.bambooeverything.dry_bamboo_fence_gate": "乾制竹柵欄門",
   "block.bambooeverything.dry_bamboo_door": "乾制竹門",
-  "block.bambooeverything.dry_bamboo_trapdoor": "乾制竹活板門",
+  "block.bambooeverything.dry_bamboo_trapdoor": "乾制竹地板門",
   "block.bambooeverything.dry_bamboo_bundle": "乾制竹塊",
   "block.bambooeverything.dry_bamboo_stairs": "乾制竹樓梯",
-  "block.bambooeverything.dry_bamboo_slab": "乾制竹台階",
+  "block.bambooeverything.dry_bamboo_slab": "乾制竹半磚",
   "block.bambooeverything.dry_bamboo_torch": "乾制竹火把",
   "item.bambooeverything.dry_bamboo_raft": "乾制竹筏"
 }
