--- a/bamboo_blocks/lang/zh_tw.json
+++ b/bamboo_blocks/lang/zh_tw.json
@@ -1,12 +1,12 @@
 {
   "block.bamboo_blocks.bamboo_torch": "竹火把",
-  "block.bamboo_blocks.bamboo_wall_torch": "墻上的竹火把",
+  "block.bamboo_blocks.bamboo_wall_torch": "牆上的竹火把",
   "block.bamboo_blocks.potted_bamboo_torch": "盆裝竹火把",
   "block.bamboo_blocks.soul_bamboo_torch": "靈魂竹火把",
-  "block.bamboo_blocks.soul_bamboo_wall_torch": "墻上的靈魂竹火把",
+  "block.bamboo_blocks.soul_bamboo_wall_torch": "牆上的靈魂竹火把",
   "block.bamboo_blocks.potted_soul_bamboo_torch": "盆裝靈魂竹火把",
   "block.bamboo_blocks.ender_bamboo_torch": "終界竹火把",
-  "block.bamboo_blocks.ender_bamboo_wall_torch": "墻上的終界竹火把",
+  "block.bamboo_blocks.ender_bamboo_wall_torch": "牆上的終界竹火把",
   "block.bamboo_blocks.potted_ender_bamboo_torch": "盆裝終界竹火把",
   "block.bamboo_blocks.bamboo_planks": "竹板",
   "block.bamboo_blocks.bamboo_stairs": "竹樓梯",
@@ -18,7 +18,7 @@
   "block.bamboo_blocks.bamboo_button": "竹按鈕",
   "block.bamboo_blocks.bamboo_pressure_plate": "竹壓力板",
   "block.bamboo_blocks.bamboo_sign": "竹告示牌",
-  "block.bamboo_blocks.bamboo_wall_sign": "墻上的竹告示牌",
+  "block.bamboo_blocks.bamboo_wall_sign": "牆上的竹告示牌",
   "block.bamboo_blocks.bamboo_ladder": "竹梯子",
   "block.bamboo_blocks.vertical_bamboo_planks": "豎紋竹板",
   "block.bamboo_blocks.trapped_bamboo_chest": "陷阱竹箱子",
