--- a/barkcarpets/lang/zh_tw.json
+++ b/barkcarpets/lang/zh_tw.json
@@ -2,10 +2,10 @@
   "itemGroup.barkcarpetstab": "樹皮地毯",
   "block.barkcarpets.oak_bark_carpet": "橡木樹皮地毯",
   "block.barkcarpets.birch_bark_carpet": "白樺木樹皮地毯",
-  "block.barkcarpets.spruce_bark_carpet": "雲杉木樹皮地毯",
-  "block.barkcarpets.dark_oak_bark_carpet": "深色橡木樹皮地毯",
+  "block.barkcarpets.spruce_bark_carpet": "杉木樹皮地毯",
+  "block.barkcarpets.dark_oak_bark_carpet": "黑橡木樹皮地毯",
   "block.barkcarpets.jungle_bark_carpet": "叢林木樹皮地毯",
-  "block.barkcarpets.acacia_bark_carpet": "金合歡木樹皮地毯",
-  "block.barkcarpets.crimson_bark_carpet": "緋紅木樹皮地毯",
+  "block.barkcarpets.acacia_bark_carpet": "相思木樹皮地毯",
+  "block.barkcarpets.crimson_bark_carpet": "緋紅蕈木樹皮地毯",
   "block.barkcarpets.warped_bark_carpet": "扭曲蕈木樹皮地毯"
 }
