--- a/battletowers/lang/zh_tw.json
+++ b/battletowers/lang/zh_tw.json
@@ -2,7 +2,7 @@
   "itemGroup.battletowers.group": "戰鬥高塔",
   "subtab.battletowers.all": "通用",
   "subtab.battletowers.developer_items": "開發者物品",
-  "item.battletowers.tower_guardian_spawn_egg": "高塔護衛刷怪蛋",
+  "item.battletowers.tower_guardian_spawn_egg": "高塔護衛生怪蛋",
   "item.battletowers.boss_key": "守衛寶鑰",
   "block.battletowers.boss_lock": "守衛之鎖",
   "entity.battletowers.tower_guard": "高塔護衛",
@@ -10,7 +10,7 @@
   "item.battletowers.key_axe": "護衛寶鑰斧",
   "item.battletowers.key_pickaxe": "玄秘寶鑰鎬",
   "item.battletowers.key_hoe": "寶鑰鋤",
-  "item.battletowers.key_shovel": "寶鑰鍬",
+  "item.battletowers.key_shovel": "寶鑰鏟",
   "item.battletowers.key_helmet": "寶鑰頭盔",
   "item.battletowers.key_chestplate": "寶鑰胸甲",
   "item.battletowers.key_leggings": "寶鑰護腿",
