--- a/bayou_blues/lang/zh_tw.json
+++ b/bayou_blues/lang/zh_tw.json
@@ -40,7 +40,7 @@
   "block.bayou_blues.gooseberry_sack": "袋裝醋栗",
   "item.bayou_blues.honey_glazed_gooseberries": "蜂蜜醋栗",
   "item.bayou_blues.gooseberry_jam": "醋栗果醬",
-  "item.bayou_blues.gooseberry_jam_cookie": "醋栗果醬曲奇",
+  "item.bayou_blues.gooseberry_jam_cookie": "醋栗果醬餅乾",
   "_comment2": "生物群系",
   "biome.bayou_blues.bayou": "長沼",
   "biome.bayou_blues.bayou_hills": "長沼丘陵",
