--- a/beachparty/lang/zh_tw.json
+++ b/beachparty/lang/zh_tw.json
@@ -116,17 +116,17 @@
   "itemGroup.beachparty.creative_tab": "沙灘派對",
   "rei.beachparty.mini_fridge_category": "迷你冰箱",
   "rei.beachparty.tiki_bar_category": "棕櫚提基櫃台",
-  "tooltip.beachparty.bucket.canbeplaced": "潛行右擊以放置",
-  "tooltip.beachparty.bucket.use": "右擊建造沙堡",
+  "tooltip.beachparty.bucket.canbeplaced": "潛行右鍵以放置",
+  "tooltip.beachparty.bucket.use": "右鍵建造沙堡",
   "tooltip.beachparty.cactusicecream": "這款仙人掌冰棒能讓你嘗到好運的味道，但不要太高興⸺它可能會讓你感到有點刺痛",
   "tooltip.beachparty.canbeplaced": "可放置",
   "tooltip.beachparty.coconut": "投擲到硬物上砸開",
   "tooltip.beachparty.dyeable": "可染色",
   "tooltip.beachparty.fridge": "用於制作雪糕和冰棒",
   "tooltip.beachparty.icecream": "永不融化，總是冰涼清爽，一分錢一分貨",
-  "tooltip.beachparty.message": "右擊打開",
+  "tooltip.beachparty.message": "右鍵打開",
   "tooltip.beachparty.radioswitch": "滾輪切換電台頻道",
-  "tooltip.beachparty.radioturnon": "右擊開啟或關閉",
+  "tooltip.beachparty.radioturnon": "右鍵開啟或關閉",
   "tooltip.beachparty.swimwear_effect": "海豚的恩惠&水下呼吸",
   "tooltip.beachparty.swimwear_set": "熱情沙灘：",
   "tooltip.beachparty.swimwear_seteffect": "套裝增益：",
