--- a/beautify/lang/zh_tw.json
+++ b/beautify/lang/zh_tw.json
@@ -14,18 +14,18 @@
   "block.beautify.quartz_picture_frame": "石英畫框",
   "block.beautify.lamp_light_bulb": "燈泡",
   "block.beautify.lamp_bamboo": "竹燈",
-  "block.beautify.lamp_jar": "熒光石燈",
+  "block.beautify.lamp_jar": "螢光石燈",
   "block.beautify.lamp_candleabra": "燭台",
-  "block.beautify.lamp_candleabra_light_blue": "淡藍色蠟燭燭台",
-  "block.beautify.lamp_candleabra_light_gray": "淡灰色蠟燭燭台",
+  "block.beautify.lamp_candleabra_light_blue": "淺藍色蠟燭燭台",
+  "block.beautify.lamp_candleabra_light_gray": "淺灰色蠟燭燭台",
   "block.beautify.lamp_candleabra_black": "黑色蠟燭燭台",
   "block.beautify.lamp_candleabra_blue": "藍色蠟燭燭台",
   "block.beautify.lamp_candleabra_brown": "棕色蠟燭燭台",
   "block.beautify.lamp_candleabra_cyan": "青色蠟燭燭台",
   "block.beautify.lamp_candleabra_gray": "灰色蠟燭燭台",
   "block.beautify.lamp_candleabra_green": "綠色蠟燭燭台",
-  "block.beautify.lamp_candleabra_lime": "黃綠色蠟燭燭台",
-  "block.beautify.lamp_candleabra_magenta": "品紅色蠟燭燭台",
+  "block.beautify.lamp_candleabra_lime": "淺綠色蠟燭燭台",
+  "block.beautify.lamp_candleabra_magenta": "洋紅色蠟燭燭台",
   "block.beautify.lamp_candleabra_orange": "橙色蠟燭燭台",
   "block.beautify.lamp_candleabra_pink": "粉紅色蠟燭燭台",
   "block.beautify.lamp_candleabra_purple": "紫色蠟燭燭台",
@@ -59,17 +59,17 @@
   "sounds.beautify.blinds_close": "百葉窗：關閉",
   "tooltip.beautify.tooltip.shift": "按住SHIFT鍵了解更多信息",
   "tooltip.beautify.tooltip.plantlist": "按住CTRL鍵查看植物列表",
-  "tooltip.beautify.trellis.tooltip.info": "可以放置在墻上或天花板上，可攀爬；手持植物右擊可將其放入其中。",
+  "tooltip.beautify.trellis.tooltip.info": "可以放置在墻上或天花板上，可攀爬；手持植物右鍵可將其放入其中。",
   "tooltip.beautify.trellis.tooltip.plant_header": "植物：",
   "tooltip.beautify.trellis.tooltip.plants": "玫瑰叢，向日葵，牡丹，丁香，藤蔓，垂淚藤，纏怨藤，發光地衣。",
-  "tooltip.beautify.hanging_pot.tooltip.info": "可懸掛在方塊上或者像往常一樣放在地面上；右擊可將植物放進去；對植物手持骨粉右擊有1/3概率覆制植物",
+  "tooltip.beautify.hanging_pot.tooltip.info": "可懸掛在方塊上或者像往常一樣放在地面上；右鍵可將植物放進去；對植物手持骨粉右鍵有1/3概率覆制植物",
   "tooltip.beautify.hanging_pot.tooltip.plant_header": "盆栽植物：",
   "tooltip.beautify.hanging_pot.tooltip.plants": "對所有小型花，玫瑰叢，丁香，牡丹，向日葵，藤蔓，垂淚藤，纏怨藤，發光地衣，發光漿果，甜漿果有效。",
-  "tooltip.beautify.bookstack.tooltip": "可隨意放置書堆，對著書堆Shift右擊改變模型；可以像書架一樣為附魔台提升附魔等級。",
-  "tooltip.beautify.lamp.info": "可以像燈籠一樣懸掛和放置，右擊以開關",
-  "tooltip.beautify.candelabra.info": "可以像燈籠一樣懸掛和放置。右擊以開關。",
-  "tooltip.beautify.lamp_jar.info": "可以像燈籠一樣懸掛和放置；用熒石粉右擊以填充，空手右擊以清除。",
-  "tooltip.blinds.tooltip.info": "右擊以打開或關閉所有相鄰的百葉窗。第一次關閉後，最上方百葉窗下方的百葉窗在打開時不再可見。",
-  "tooltip.beautify.picture_frame.tooltip.info": "可隨意放置畫框，對著畫框Shift右擊以改變畫框內的畫",
+  "tooltip.beautify.bookstack.tooltip": "可隨意放置書堆，對著書堆Shift右鍵改變模型；可以像書架一樣為附魔台提升附魔等級。",
+  "tooltip.beautify.lamp.info": "可以像燈籠一樣懸掛和放置，右鍵以開關",
+  "tooltip.beautify.candelabra.info": "可以像燈籠一樣懸掛和放置。右鍵以開關。",
+  "tooltip.beautify.lamp_jar.info": "可以像燈籠一樣懸掛和放置；用熒石粉右鍵以填充，空手右鍵以清除。",
+  "tooltip.blinds.tooltip.info": "右鍵以打開或關閉所有相鄰的百葉窗。第一次關閉後，最上方百葉窗下方的百葉窗在打開時不再可見。",
+  "tooltip.beautify.picture_frame.tooltip.info": "可隨意放置畫框，對著畫框Shift右鍵以改變畫框內的畫",
   "tooltip.beautify.rope.tooltip.info": "可以像鎖鏈一樣放置；可以攀爬。和懸掛花盆很搭。"
 }
