--- a/beesourceful/lang/zh_tw.json
+++ b/beesourceful/lang/zh_tw.json
@@ -1,9 +1,9 @@
 {
   "item.beesourceful.iron_honeycomb": "鐵蜜脾",
   "item.beesourceful.gold_honeycomb": "金蜜脾",
-  "item.beesourceful.ender_honeycomb": "末影蜜脾",
+  "item.beesourceful.ender_honeycomb": "終界蜜脾",
   "item.beesourceful.emerald_honeycomb": "綠寶石蜜脾",
-  "item.beesourceful.diamond_honeycomb": "鉆石蜜脾",
+  "item.beesourceful.diamond_honeycomb": "鑽石蜜脾",
   "gui.beesourceful.category.centrifuge": "離心分離機",
   "fluid.beesourceful.honey": "蜂蜜",
   "entity.beesourceful.redstone_bee": "紅石蜜蜂",
@@ -11,10 +11,10 @@
   "entity.beesourceful.lapis_bee": "青金石蜜蜂",
   "entity.beesourceful.iron_bee": "鐵蜜蜂",
   "entity.beesourceful.gold_bee": "金蜜蜂",
-  "entity.beesourceful.ender_bee": "末影蜜蜂",
+  "entity.beesourceful.ender_bee": "終界蜜蜂",
   "entity.beesourceful.emerald_bee": "綠寶石蜜蜂",
   "block.beesourceful.redstone_honeycomb_block": "紅石蜜脾塊",
-  "entity.beesourceful.diamond_bee": "鉆石蜜蜂",
+  "entity.beesourceful.diamond_bee": "鑽石蜜蜂",
   "block.beesourceful.redstone_bee_nest": "紅石蜂巢",
   "block.beesourceful.quartz_honeycomb_block": "石英蜜脾塊",
   "block.beesourceful.lapis_honeycomb_block": "青金石蜜脾塊",
@@ -25,12 +25,12 @@
   "block.beesourceful.iron_bee_nest": "鐵蜂巢",
   "block.beesourceful.gold_honeycomb_block": "金蜜脾塊",
   "block.beesourceful.gold_bee_nest": "金蜂巢",
-  "block.beesourceful.ender_honeycomb_block": "末影蜜脾塊",
-  "block.beesourceful.diamond_honeycomb_block": "鉆石蜜脾塊",
-  "block.beesourceful.diamond_bee_nest": "鉆石蜂巢",
+  "block.beesourceful.ender_honeycomb_block": "終界蜜脾塊",
+  "block.beesourceful.diamond_honeycomb_block": "鑽石蜜脾塊",
+  "block.beesourceful.diamond_bee_nest": "鑽石蜂巢",
   "block.beesourceful.emerald_honeycomb_block": "綠寶石蜜脾塊",
   "block.beesourceful.emerald_bee_nest": "綠寶石蜂巢",
-  "block.beesourceful.ender_bee_nest": "末影蜂巢",
+  "block.beesourceful.ender_bee_nest": "終界蜂巢",
   "item.beesourceful.redstone_honeycomb": "紅石蜜脾",
   "item.beesourceful.lapis_honeycomb": "青金石蜜脾",
   "item.beesourceful.quartz_honeycomb": "石英蜜脾",
