--- a/bellsandwhistles/lang/zh_tw.json
+++ b/bellsandwhistles/lang/zh_tw.json
@@ -21,20 +21,20 @@
   "block.bellsandwhistles.andesite_pilot": "安山排障器",
   "block.bellsandwhistles.brass_pilot": "黃銅排障器",
   "block.bellsandwhistles.copper_pilot": "銅排障器",
-  "block.bellsandwhistles.polished_andesite_pilot": "磨制安山巖排障器",
-  "block.bellsandwhistles.polished_asurine_pilot": "磨制皓藍石排障器",
-  "block.bellsandwhistles.polished_calcite_pilot": "磨制方解石排障器",
-  "block.bellsandwhistles.polished_crimsite_pilot": "磨制緋紅巖排障器",
-  "block.bellsandwhistles.polished_deepslate_pilot": "磨制深板巖排障器",
-  "block.bellsandwhistles.polished_diorite_pilot": "磨制閃長巖排障器",
-  "block.bellsandwhistles.polished_dripstone_pilot": "磨制滴水石排障器",
-  "block.bellsandwhistles.polished_granite_pilot": "磨制花崗巖排障器",
-  "block.bellsandwhistles.polished_limestone_pilot": "磨制石灰巖排障器",
-  "block.bellsandwhistles.polished_ochrum_pilot": "磨制赭金砂排障器",
-  "block.bellsandwhistles.polished_scorchia_pilot": "磨制焦黑熔渣排障器",
-  "block.bellsandwhistles.polished_scoria_pilot": "磨制熔渣排障器",
-  "block.bellsandwhistles.polished_tuff_pilot": "磨制凝灰巖排障器",
-  "block.bellsandwhistles.polished_veridium_pilot": "磨制輝綠巖排障器",
+  "block.bellsandwhistles.polished_andesite_pilot": "拋光安山岩排障器",
+  "block.bellsandwhistles.polished_asurine_pilot": "拋光皓藍石排障器",
+  "block.bellsandwhistles.polished_calcite_pilot": "拋光方解石排障器",
+  "block.bellsandwhistles.polished_crimsite_pilot": "拋光緋紅岩排障器",
+  "block.bellsandwhistles.polished_deepslate_pilot": "拋光深板岩排障器",
+  "block.bellsandwhistles.polished_diorite_pilot": "拋光閃長岩排障器",
+  "block.bellsandwhistles.polished_dripstone_pilot": "拋光滴水石排障器",
+  "block.bellsandwhistles.polished_granite_pilot": "拋光花崗岩排障器",
+  "block.bellsandwhistles.polished_limestone_pilot": "拋光石灰岩排障器",
+  "block.bellsandwhistles.polished_ochrum_pilot": "拋光赭金砂排障器",
+  "block.bellsandwhistles.polished_scorchia_pilot": "拋光焦黑熔渣排障器",
+  "block.bellsandwhistles.polished_scoria_pilot": "拋光熔渣排障器",
+  "block.bellsandwhistles.polished_tuff_pilot": "拋光凝灰岩排障器",
+  "block.bellsandwhistles.polished_veridium_pilot": "拋光輝綠岩排障器",
   "creativetab.bellsandwhistlestab": "Bells & Whistles",
   "itemGroup.bellsandwhistles.bellsandwhistlestab": "Bells & Whistles"
 }
