--- a/benched/lang/zh_tw.json
+++ b/benched/lang/zh_tw.json
@@ -1,10 +1,10 @@
 {
-  "block.benched.acacia_bench": "金合歡木野餐桌",
+  "block.benched.acacia_bench": "相思木野餐桌",
   "block.benched.birch_bench": "白樺木野餐桌",
-  "block.benched.dark_oak_bench": "深色橡木野餐桌",
+  "block.benched.dark_oak_bench": "黑橡木野餐桌",
   "block.benched.jungle_bench": "叢林木野餐桌",
   "block.benched.bench": "橡木野餐桌",
-  "block.benched.spruce_bench": "雲杉木野餐桌",
+  "block.benched.spruce_bench": "杉木野餐桌",
   "block.benched.crimson_bench": "緋紅蕈木野餐桌",
   "block.benched.warped_bench": "扭曲蕈木野餐桌"
 }
