--- a/better_badlands/lang/zh_tw.json
+++ b/better_badlands/lang/zh_tw.json
@@ -14,13 +14,13 @@
   "block.better_badlands.blue_terracotta_lamp": "藍色陶瓦燈",
   "block.better_badlands.purple_terracotta_lamp": "紫色陶瓦燈",
   "block.better_badlands.cyan_terracotta_lamp": "青色陶瓦燈",
-  "block.better_badlands.light_gray_terracotta_lamp": "淡灰色陶瓦燈",
+  "block.better_badlands.light_gray_terracotta_lamp": "淺灰色陶瓦燈",
   "block.better_badlands.gray_terracotta_lamp": "灰色陶瓦燈",
   "block.better_badlands.pink_terracotta_lamp": "粉紅色陶瓦燈",
-  "block.better_badlands.lime_terracotta_lamp": "黃綠色陶瓦燈",
+  "block.better_badlands.lime_terracotta_lamp": "淺綠色陶瓦燈",
   "block.better_badlands.yellow_terracotta_lamp": "黃色陶瓦燈",
-  "block.better_badlands.light_blue_terracotta_lamp": "淡藍色陶瓦燈",
-  "block.better_badlands.magenta_terracotta_lamp": "品紅色陶瓦燈",
+  "block.better_badlands.light_blue_terracotta_lamp": "淺藍色陶瓦燈",
+  "block.better_badlands.magenta_terracotta_lamp": "洋紅色陶瓦燈",
   "block.better_badlands.orange_terracotta_lamp": "橙色陶瓦燈",
   "block.better_badlands.white_terracotta_lamp": "白色陶瓦燈"
 }
