--- a/better_berries_plus/lang/zh_tw.json
+++ b/better_berries_plus/lang/zh_tw.json
@@ -22,17 +22,17 @@
   "item.better_berries_plus.strawberry_jam": "草莓醬",
   "item.better_berries_plus.sweet_berry_jam": "甜漿果醬",
   "item.better_berries_plus.spooky_jam": "幽靈果醬",
-  "item.better_berries_plus.blackberry_jam_and_toast": "黑莓醬夾心面包",
-  "item.better_berries_plus.blueberry_jam_and_toast": "黑莓醬夾心面包",
-  "item.better_berries_plus.candleberry_jam_and_toast": "蠟楊梅醬夾心面包",
-  "item.better_berries_plus.cranberry_jam_and_toast": "蔓越莓醬夾心面包",
-  "item.better_berries_plus.glow_berry_jam_and_toast": "發光漿果醬夾心面包",
-  "item.better_berries_plus.maloberry_jam_and_toast": "黃莓醬夾心面包",
-  "item.better_berries_plus.mulberry_jam_and_toast": "桑葚醬夾心面包",
-  "item.better_berries_plus.raspberry_jam_and_toast": "覆盆子醬夾心面包",
-  "item.better_berries_plus.strawberry_jam_and_toast": "草莓醬夾心面包",
-  "item.better_berries_plus.sweet_berry_jam_and_toast": "甜漿果醬夾心面包",
-  "item.better_berries_plus.spooky_jam_and_toast": "幽靈果醬夾心面包",
+  "item.better_berries_plus.blackberry_jam_and_toast": "黑莓醬夾心麵包",
+  "item.better_berries_plus.blueberry_jam_and_toast": "黑莓醬夾心麵包",
+  "item.better_berries_plus.candleberry_jam_and_toast": "蠟楊梅醬夾心麵包",
+  "item.better_berries_plus.cranberry_jam_and_toast": "蔓越莓醬夾心麵包",
+  "item.better_berries_plus.glow_berry_jam_and_toast": "發光漿果醬夾心麵包",
+  "item.better_berries_plus.maloberry_jam_and_toast": "黃莓醬夾心麵包",
+  "item.better_berries_plus.mulberry_jam_and_toast": "桑葚醬夾心麵包",
+  "item.better_berries_plus.raspberry_jam_and_toast": "覆盆子醬夾心麵包",
+  "item.better_berries_plus.strawberry_jam_and_toast": "草莓醬夾心麵包",
+  "item.better_berries_plus.sweet_berry_jam_and_toast": "甜漿果醬夾心麵包",
+  "item.better_berries_plus.spooky_jam_and_toast": "幽靈果醬夾心麵包",
   "block.better_berries_plus.candleberry_bush": "蠟楊梅叢",
   "block.better_berries_plus.cranberry_bush": "蔓越莓叢",
   "block.better_berries_plus.mulberry_bush": "桑葚叢",
