--- a/bamboo_blocks/lang/zh_tw.json
+++ b/bamboo_blocks/lang/zh_tw.json
@@ -8,7 +8,7 @@
   "block.bamboo_blocks.ender_bamboo_torch": "終界竹火把",
   "block.bamboo_blocks.ender_bamboo_wall_torch": "牆上的終界竹火把",
   "block.bamboo_blocks.potted_ender_bamboo_torch": "盆裝終界竹火把",
-  "block.bamboo_blocks.bamboo_planks": "竹板",
+  "block.bamboo_blocks.bamboo_planks": "竹材",
   "block.bamboo_blocks.bamboo_stairs": "竹樓梯",
   "block.bamboo_blocks.bamboo_slab": "竹半磚",
   "block.bamboo_blocks.bamboo_fence": "竹柵欄",
