--- a/bambootweaks/lang/zh_tw.json
+++ b/bambootweaks/lang/zh_tw.json
@@ -1,7 +1,7 @@
 {
   "block.bambootweaks.bamboo_block": "竹塊",
   "block.bambootweaks.bamboo_fence_gate": "竹柵欄門",
-  "block.bambootweaks.bamboo_wall": "竹墻",
+  "block.bambootweaks.bamboo_wall": "竹牆",
   "block.bambootweaks.bamboo_fence": "竹柵欄",
   "block.bambootweaks.bamboo_ladder": "竹梯子",
   "block.bambootweaks.bamboo_rod": "竹桿",
@@ -12,7 +12,7 @@
   "item.bambootweaks.dry_bamboo": "乾竹",
   "block.bambootweaks.dry_bamboo_block": "乾竹塊",
   "block.bambootweaks.dry_bamboo_fence_gate": "乾竹柵欄門",
-  "block.bambootweaks.dry_bamboo_wall": "乾竹墻",
+  "block.bambootweaks.dry_bamboo_wall": "乾竹牆",
   "block.bambootweaks.dry_bamboo_fence": "乾竹柵欄",
   "block.bambootweaks.dry_bamboo_ladder": "乾竹梯子",
   "block.bambootweaks.dry_bamboo_rod": "乾竹桿",
