--- a/barkcarpets/lang/zh_tw.json
+++ b/barkcarpets/lang/zh_tw.json
@@ -1,7 +1,7 @@
 {
   "itemGroup.barkcarpetstab": "樹皮地毯",
   "block.barkcarpets.oak_bark_carpet": "橡木樹皮地毯",
-  "block.barkcarpets.birch_bark_carpet": "白樺木樹皮地毯",
+  "block.barkcarpets.birch_bark_carpet": "樺木樹皮地毯",
   "block.barkcarpets.spruce_bark_carpet": "杉木樹皮地毯",
   "block.barkcarpets.dark_oak_bark_carpet": "黑橡木樹皮地毯",
   "block.barkcarpets.jungle_bark_carpet": "叢林木樹皮地毯",
