--- a/bayou_blues/lang/zh_tw.json
+++ b/bayou_blues/lang/zh_tw.json
@@ -4,7 +4,7 @@
   "block.bayou_blues.cypress_log": "絲柏原木",
   "block.bayou_blues.stripped_cypress_wood": "去皮絲柏木",
   "block.bayou_blues.cypress_wood": "絲柏木",
-  "block.bayou_blues.cypress_planks": "絲柏木板",
+  "block.bayou_blues.cypress_planks": "絲柏木材",
   "block.bayou_blues.cypress_slab": "絲柏木半磚",
   "block.bayou_blues.cypress_stairs": "絲柏木樓梯",
   "block.bayou_blues.cypress_pressure_plate": "絲柏木壓力板",
@@ -47,7 +47,7 @@
   "entity.bayou_blues.slabfish.type.bayou": "長沼",
   "_comment3": "百合花",
   "block.bayou_blues.blue_lily": "藍色百合",
-  "block.bayou_blues.light_gray_lily": "淡灰色百合",
+  "block.bayou_blues.light_gray_lily": "淺灰色百合",
   "block.bayou_blues.cyan_lily": "青色百合",
   "block.bayou_blues.light_blue_lily": "淡藍色百合",
   "block.bayou_blues.magenta_lily": "品紅色百合",
@@ -58,7 +58,7 @@
   "block.bayou_blues.potted_light_gray_lily": "淡灰色百合盆栽",
   "block.bayou_blues.potted_cyan_lily": "青色百合盆栽",
   "block.bayou_blues.potted_light_blue_lily": "淡藍色百合盆栽",
-  "block.bayou_blues.potted_magenta_lily": "品紅色百合盆栽",
+  "block.bayou_blues.potted_magenta_lily": "洋紅色百合盆栽",
   "block.bayou_blues.potted_pink_lily": "粉紅色百合盆栽",
   "block.bayou_blues.potted_purple_lily": "紫色百合盆栽",
   "block.bayou_blues.potted_white_lily": "白色百合盆栽",
