--- a/beachparty/lang/zh_tw.json
+++ b/beachparty/lang/zh_tw.json
@@ -37,7 +37,7 @@
   "block.beachparty.message_in_a_bottle": "漂流瓶",
   "block.beachparty.mini_fridge": "迷你冰箱",
   "block.beachparty.notimplemented": "（這個方塊有尚未完全實現的功能。敬請期待！）",
-  "block.beachparty.palm_beam": "棕櫚木梁",
+  "block.beachparty.palm_beam": "棕櫚木樑",
   "block.beachparty.palm_button": "棕櫚木按鈕",
   "block.beachparty.palm_door": "棕櫚木門",
   "block.beachparty.palm_fence": "棕櫚木柵欄",
