--- a/beachparty/lang/zh_tw.json
+++ b/beachparty/lang/zh_tw.json
@@ -45,7 +45,7 @@
   "block.beachparty.palm_floorboard": "棕櫚木地板",
   "block.beachparty.palm_leaves": "棕櫚樹葉",
   "block.beachparty.palm_log": "棕櫚原木",
-  "block.beachparty.palm_planks": "棕櫚木板",
+  "block.beachparty.palm_planks": "棕櫚木材",
   "block.beachparty.palm_pressure_plate": "棕櫚木壓力板",
   "block.beachparty.palm_sapling": "棕櫚樹苗",
   "block.beachparty.palm_sign": "棕櫚木告示牌",
@@ -78,7 +78,7 @@
   "entity.minecraft.villager.beachparty.barkeeper": "酒保",
   "entity.minecraft.villager.beachparty.beach_boy": "沙灘服務員",
   "gui.beachparty.recipebook.toggleRecipes.refridgable": "顯示可冷凍",
-  "gui.beachparty.recipebook.toggleRecipes.shakeable": "顯示可調制",
+  "gui.beachparty.recipebook.toggleRecipes.shakeable": "顯示可調製",
   "item.beachparty.beach_hat": "遮陽帽",
   "item.beachparty.bikini": "比基尼",
   "item.beachparty.chocolate_icecream": "巧克力聖代",
@@ -102,7 +102,7 @@
   "item.beachparty.pool_noodle": "泡沫浮條",
   "item.beachparty.raw_mussel_meat": "生貽貝肉",
   "item.beachparty.raw_pelican": "生鵜鶘肉",
-  "item.beachparty.rubber_ring_axolotl": "美西螈遊泳圈",
+  "item.beachparty.rubber_ring_axolotl": "六角恐龍遊泳圈",
   "item.beachparty.rubber_ring_blue": "藍色遊泳圈",
   "item.beachparty.rubber_ring_pelican": "鵜鶘遊泳圈",
   "item.beachparty.rubber_ring_pink": "粉紅色遊泳圈",
