--- a/beautify/lang/zh_tw.json
+++ b/beautify/lang/zh_tw.json
@@ -4,7 +4,7 @@
   "block.beautify.hanging_pot": "懸掛花盆",
   "block.beautify.bookstack": "書堆",
   "block.beautify.oak_picture_frame": "橡木畫框",
-  "block.beautify.birch_picture_frame": "白樺木畫框",
+  "block.beautify.birch_picture_frame": "樺木畫框",
   "block.beautify.spruce_picture_frame": "杉木畫框",
   "block.beautify.dark_oak_picture_frame": "黑橡木畫框",
   "block.beautify.jungle_picture_frame": "叢林木畫框",
@@ -34,7 +34,7 @@
   "block.beautify.lamp_candleabra_yellow": "黃色蠟燭燭台",
   "block.beautify.oak_blinds": "橡木百葉窗",
   "block.beautify.spruce_blinds": "杉木百葉窗",
-  "block.beautify.birch_blinds": "白樺木百葉窗",
+  "block.beautify.birch_blinds": "樺木百葉窗",
   "block.beautify.dark_oak_blinds": "黑橡木百葉窗",
   "block.beautify.jungle_blinds": "叢林木百葉窗",
   "block.beautify.crimson_blinds": "緋紅蕈木百葉窗",
@@ -43,7 +43,7 @@
   "block.beautify.iron_blinds": "鐵百葉窗",
   "block.beautify.oak_trellis": "橡木花爬架",
   "block.beautify.spruce_trellis": "杉木花爬架",
-  "block.beautify.birch_trellis": "白樺木花爬架",
+  "block.beautify.birch_trellis": "樺木花爬架",
   "block.beautify.jungle_trellis": "叢林木花爬架",
   "block.beautify.acacia_trellis": "相思木花爬架",
   "block.beautify.dark_oak_trellis": "黑橡木花爬架",
