--- a/bellsandwhistles/lang/zh_tw.json
+++ b/bellsandwhistles/lang/zh_tw.json
@@ -27,7 +27,7 @@
   "block.bellsandwhistles.polished_crimsite_pilot": "拋光緋紅岩排障器",
   "block.bellsandwhistles.polished_deepslate_pilot": "拋光深板岩排障器",
   "block.bellsandwhistles.polished_diorite_pilot": "拋光閃長岩排障器",
-  "block.bellsandwhistles.polished_dripstone_pilot": "拋光滴水石排障器",
+  "block.bellsandwhistles.polished_dripstone_pilot": "拋光鐘乳石排障器",
   "block.bellsandwhistles.polished_granite_pilot": "拋光花崗岩排障器",
   "block.bellsandwhistles.polished_limestone_pilot": "拋光石灰岩排障器",
   "block.bellsandwhistles.polished_ochrum_pilot": "拋光赭金砂排障器",
