--- a/benched/lang/zh_tw.json
+++ b/benched/lang/zh_tw.json
@@ -1,6 +1,6 @@
 {
   "block.benched.acacia_bench": "相思木野餐桌",
-  "block.benched.birch_bench": "白樺木野餐桌",
+  "block.benched.birch_bench": "樺木野餐桌",
   "block.benched.dark_oak_bench": "黑橡木野餐桌",
   "block.benched.jungle_bench": "叢林木野餐桌",
   "block.benched.bench": "橡木野餐桌",
