--- a/betterarcheology/lang/zh_tw.json
+++ b/betterarcheology/lang/zh_tw.json
@@ -1,7 +1,7 @@
 {
   "itemGroup.betterarcheology": "更好的考古學",
   "block.betterarcheology.rotten_log": "腐朽原木",
-  "block.betterarcheology.rotten_planks": "腐朽木板",
+  "block.betterarcheology.rotten_planks": "腐朽木材",
   "block.betterarcheology.rotten_slab": "腐朽木半磚",
   "block.betterarcheology.rotten_stairs": "腐朽木樓梯",
   "block.betterarcheology.rotten_fence": "腐朽木柵欄",
@@ -43,7 +43,7 @@
   "block.betterarcheology.creeper_fossil": "苦力怕化石",
   "block.betterarcheology.creeper_fossil_tooltip": "它比真的苦力怕看著還嚇人⋯⋯",
   "block.betterarcheology.creeper_fossil_head": "苦力怕顱骨化石",
-  "block.betterarcheology.creeper_fossil_head_tooltip": "這張臉曾讓你陷入無休止的戰栗之中",
+  "block.betterarcheology.creeper_fossil_head_tooltip": "這張臉曾讓你陷入無休止的戰慄之中",
   "block.betterarcheology.creeper_fossil_body": "苦力怕軀幹化石",
   "block.betterarcheology.creeper_fossil_body_tooltip": "所以這就是它力量的源頭！",
   "block.betterarcheology.loot_vase": "古代花瓶",
@@ -53,7 +53,7 @@
   "block.betterarcheology.evoker_trap": "喚魔者陷阱",
   "advancements.shards": "碎片知識",
   "advancements.shards.description": "找到一個神秘碎片",
-  "advancements.artifact": "一切都在逐漸明了",
+  "advancements.artifact": "一切都在逐漸明瞭",
   "advancements.artifact.description": "使用文物碎片合成未經鑒定的文物，現在開始鑒定吧！",
   "advancements.vase": "粉碎成功",
   "advancements.vase.description": "通過打破花瓶以獲得戰利品",
@@ -66,7 +66,7 @@
   "block.betterarcheology.fossil_head_set": " [1/2]",
   "block.betterarcheology.fossil_body_set": " [2/2]",
   "item.betterarcheology.iron_brush": "鐵刷",
-  "item.betterarcheology.diamond_brush": "鉆石刷",
+  "item.betterarcheology.diamond_brush": "鑽石刷",
   "block.betterarcheology.archeology_table": "考古學桌",
   "item.betterarcheology.artifact_shards": "文物碎片",
   "item.betterarcheology.unidentified_artifact": "未經鑒定的文物",
@@ -75,7 +75,7 @@
   "item.betterarcheology.torrent_totem": "洪流圖騰",
   "item.betterarcheology.torrent_totem_description": "在陸地上使用以進行洪流沖刺",
   "item.betterarcheology.soul_totem": "靈魂圖騰",
-  "item.betterarcheology.soul_totem_description": "能力：傷害目標並恢覆生命",
+  "item.betterarcheology.soul_totem_description": "能力：傷害目標並恢復生命",
   "entity.minecraft.villager.betterarcheology.archeologist": "考古學家",
   "enchantment.betterarcheology.penetrating_strike": "穿透打擊",
   "item.betterarcheology.penetrating_strike_tooltip": "部分忽略保護附魔的效果",
