--- a/betterarcheology/lang/zh_tw.json
+++ b/betterarcheology/lang/zh_tw.json
@@ -33,7 +33,7 @@
   "block.betterarcheology.sheep_fossil_head": "綿羊顱骨化石",
   "block.betterarcheology.sheep_fossil_head_tooltip": "也許它能撞出比山羊更深刻的凹痕",
   "block.betterarcheology.sheep_fossil_body": "綿羊化石身體",
-  "block.betterarcheology.sheep_fossil_body_tooltip": "不再那麽蓬松⋯⋯",
+  "block.betterarcheology.sheep_fossil_body_tooltip": "不再那麽蓬鬆⋯⋯",
   "block.betterarcheology.chicken_fossil": "雞化石",
   "block.betterarcheology.chicken_fossil_tooltip": "靠近它的時候你感覺身體變輕了",
   "block.betterarcheology.chicken_fossil_head": "雞顱骨化石",
@@ -62,7 +62,7 @@
   "advancements.fossil_found": "古代寶藏",
   "advancements.fossil_found.description": "在化石泥土中發現一個化石",
   "advancements.all_fossils_found": "古生物學家的榮耀",
-  "advancements.all_fossils_found.description": "收集所有的化石部分！",
+  "advancements.all_fossils_found.description": "收集所有的化石部份！",
   "block.betterarcheology.fossil_head_set": " [1/2]",
   "block.betterarcheology.fossil_body_set": " [2/2]",
   "item.betterarcheology.iron_brush": "鐵刷",
@@ -73,7 +73,7 @@
   "item.betterarcheology.identified_artifact": "已鑒定的文物",
   "item.betterarcheology.bomb": "銹蝕炸彈",
   "item.betterarcheology.torrent_totem": "洪流圖騰",
-  "item.betterarcheology.torrent_totem_description": "在陸地上使用以進行洪流沖刺",
+  "item.betterarcheology.torrent_totem_description": "在陸地上使用以進行洪流衝刺",
   "item.betterarcheology.soul_totem": "靈魂圖騰",
   "item.betterarcheology.soul_totem_description": "能力：傷害目標並恢復生命",
   "entity.minecraft.villager.betterarcheology.archeologist": "考古學家",
