--- a/betterarcheology/lang/zh_tw.json
+++ b/betterarcheology/lang/zh_tw.json
@@ -21,7 +21,7 @@
   "block.betterarcheology.villager_fossil_head": "村民顱骨化石",
   "block.betterarcheology.villager_fossil_head_tooltip": "他們看起來還沒進化到位⋯⋯",
   "block.betterarcheology.villager_fossil_body": "村民軀幹化石",
-  "block.betterarcheology.villager_fossil_body_tooltip": "這個可怖的東西提醒著人們曾有一座村莊消失在時間之中",
+  "block.betterarcheology.villager_fossil_body_tooltip": "這個恐怖的東西提醒著人們曾有一座村莊消失在時間之中",
   "block.betterarcheology.ocelot_fossil": "豹貓化石",
   "block.betterarcheology.ocelot_fossil_tooltip": "苦力怕害怕這個更甚於害怕活貓",
   "block.betterarcheology.ocelot_fossil_head": "豹貓顱骨化石",
