--- a/betterdefaultbiomes/lang/zh_tw.json
+++ b/betterdefaultbiomes/lang/zh_tw.json
@@ -67,7 +67,7 @@
   "entity.betterdefaultbiomes.head_hunter": "獵頭人",
   "entity.betterdefaultbiomes.jungle_creeper": "叢林苦力怕",
   "entity.betterdefaultbiomes.lost_miner": "失落礦工",
-  "entity.betterdefaultbiomes.frozen_zombie": "冰凍僵屍",
+  "entity.betterdefaultbiomes.frozen_zombie": "冰凍殭屍",
   "entity.betterdefaultbiomes.desert_bandit": "沙漠強盜",
   "entity.betterdefaultbiomes.desert_bandit_archer": "沙漠強盜弓箭手",
   "entity.betterdefaultbiomes.desert_bandit_arbalist": "沙漠強盜勁弩手",
@@ -88,7 +88,7 @@
   "item.betterdefaultbiomes.jungle_creeper_spawn_egg": "叢林苦力怕生怪蛋",
   "item.betterdefaultbiomes.warthog_spawn_egg": "疣豬生怪蛋",
   "item.betterdefaultbiomes.lost_miner_spawn_egg": "失落礦工生怪蛋",
-  "item.betterdefaultbiomes.frozen_zombie_spawn_egg": "冰凍僵屍生怪蛋",
+  "item.betterdefaultbiomes.frozen_zombie_spawn_egg": "冰凍殭屍生怪蛋",
   "item.betterdefaultbiomes.desert_bandit_spawn_egg": "沙漠強盜生怪蛋",
   "item.betterdefaultbiomes.desert_bandit_archer_spawn_egg": "沙漠強盜弓箭手生怪蛋",
   "item.betterdefaultbiomes.desert_bandit_arbalist_spawn_egg": "沙漠強盜勁弩手生怪蛋",
